add more controller and such

--- a/KamaFi.Retirement.Snapshot.Core/appsettings.Development.json
+++ b/KamaFi.Retirement.Snapshot.Core/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "RetirementSnapshotDb": {
+    "Host": "127.0.0.1:5438",
+    "Username": "admin",
+    "Password": "admin",
+    "DatabaseName": "retirement_snapshot"
   }
 }
