--- a/KamaFi.Retirement.Snapshot.Core/appsettings.json
+++ b/KamaFi.Retirement.Snapshot.Core/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "RetirementSnapshotDb": {
+    "Host": "",
+    "Username": "",
+    "Password": "",
+    "DatabaseName": ""
+  }
 }
