--- a/KamaFi.Retirement.Snapshot.Data.Migrations/KamaFi.Retirement.Snapshot.Data.Migrations.csproj
+++ b/KamaFi.Retirement.Snapshot.Data.Migrations/KamaFi.Retirement.Snapshot.Data.Migrations.csproj
@@ -20,4 +20,14 @@
     <ProjectReference Include="..\KamaFi.Retirement.Snapshot.Data\KamaFi.Retirement.Snapshot.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
