--- a/.github/workflows/build-kamafi-retirement-snapshot-core.yml
+++ b/.github/workflows/build-kamafi-retirement-snapshot-core.yml
@@ -1,4 +1,4 @@
-name: build
+name: build-core
 
 on:
   push:
@@ -15,7 +15,7 @@ jobs:
       output_path: app/publish
 
   build_kamafi_retirement_snapshot_core_container:
-    needs: build
+    needs: build_kamafi_retirement_snapshot_core
     uses: ./.github/workflows/build-container-base.yml
     with:
       configuration: release
