update ls and step

--- a/KamaFi.Retirement.Snapshot.Background/Properties/launchSettings.json
+++ b/KamaFi.Retirement.Snapshot.Background/Properties/launchSettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "KamaFi.Retirement.Snapshot.Core": {
+    "KamaFi.Retirement.Snapshot.Background": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "applicationUrl": "http://localhost:5156",
