--- a/KamaFi.Retirement.Snapshot.Background/appsettings.json
+++ b/KamaFi.Retirement.Snapshot.Background/appsettings.json
@@ -8,5 +8,9 @@
   "AllowedHosts": "*",
   "BackgroundServiceOptions": {
     "Period": 3600
+  },
+  "BackgroundServiceApiOptions": {
+    "BaseUrl": "",
+    "Endpoint": ""
   }
 }
