--- a/KamaFi.Retirement.Snapshot.Background/appsettings.Development.json
+++ b/KamaFi.Retirement.Snapshot.Background/appsettings.Development.json
@@ -7,5 +7,9 @@
   },
   "BackgroundServiceOptions": {
     "Period": 5
+  },
+  "BackgroundServiceApiOptions": {
+    "BaseUrl": "http://localhost:5124",
+    "Endpoint": "/health"
   }
 }
