feature/10-22/add-improvements (#2)

--- a/KamaFi.Retirement.Snapshot.Background/Properties/launchSettings.json
+++ b/KamaFi.Retirement.Snapshot.Background/Properties/launchSettings.json
@@ -1,10 +1,10 @@
 ﻿{
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "KamaFi.Retirement.Snapshot.Core": {
+    "KamaFi.Retirement.Snapshot.Background": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5124",
+      "applicationUrl": "http://localhost:5156",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
