add seed and unit tests

--- a/KamaFi.Retirement.Snapshot.UnitTests/KamaFi.Retirement.Snapshot.UnitTests.csproj
+++ b/KamaFi.Retirement.Snapshot.UnitTests/KamaFi.Retirement.Snapshot.UnitTests.csproj
@@ -26,6 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\KamaFi.Retirement.Snapshot.Data.Migrations\KamaFi.Retirement.Snapshot.Data.Migrations.csproj" />
     <ProjectReference Include="..\KamaFi.Retirement.Snapshot.Data\KamaFi.Retirement.Snapshot.Data.csproj" />
     <ProjectReference Include="..\KamaFi.Retirement.Snapshot.Services\KamaFi.Retirement.Snapshot.Services.csproj" />
   </ItemGroup>
