--- a/src/KamaFi.Retirement.Snapshot.Domain/KamaFi.Retirement.Snapshot.Domain.csproj
+++ b/src/KamaFi.Retirement.Snapshot.Domain/KamaFi.Retirement.Snapshot.Domain.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\KamaFi.Retirement.Snapshot.Common\KamaFi.Retirement.Snapshot.Common.csproj" />
+  </ItemGroup>
+
 </Project>
