--- a/src/KamaFi.Retirement.Snapshot.Application/KamaFi.Retirement.Snapshot.Application.csproj
+++ b/src/KamaFi.Retirement.Snapshot.Application/KamaFi.Retirement.Snapshot.Application.csproj
@@ -7,7 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="C:\Users\gkama\.nuget\packages\microsoft.azure.cosmos\3.33.0\contentFiles\any\netstandard2.0\ThirdPartyNotice.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MediatR" Version="12.0.1" />
+    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.33.0" />
   </ItemGroup>
 
   <ItemGroup>
