--- a/src/KamaFi.Retirement.Snapshot.Infrastructure/KamaFi.Retirement.Snapshot.Infrastructure.csproj
+++ b/src/KamaFi.Retirement.Snapshot.Infrastructure/KamaFi.Retirement.Snapshot.Infrastructure.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\KamaFi.Retirement.Snapshot.Application\KamaFi.Retirement.Snapshot.Application.csproj" />
     <ProjectReference Include="..\KamaFi.Retirement.Snapshot.Common\KamaFi.Retirement.Snapshot.Common.csproj" />
     <ProjectReference Include="..\KamaFi.Retirement.Snapshot.Domain\KamaFi.Retirement.Snapshot.Domain.csproj" />
