--- a/src/KamaFi.Retirement.Snapshot.Presentation/KamaFi.Retirement.Snapshot.Presentation.csproj
+++ b/src/KamaFi.Retirement.Snapshot.Presentation/KamaFi.Retirement.Snapshot.Presentation.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\KamaFi.Retirement.Snapshot.Common\KamaFi.Retirement.Snapshot.Common.csproj" />
+    <ProjectReference Include="..\KamaFi.Retirement.Snapshot.Infrastructure\KamaFi.Retirement.Snapshot.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
