--- a/src/KamaFi.Retirement.Snapshot.Application/KamaFi.Retirement.Snapshot.Application.csproj
+++ b/src/KamaFi.Retirement.Snapshot.Application/KamaFi.Retirement.Snapshot.Application.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="ExcelFinancialFunctions" Version="3.3.0-rc1" />
     <PackageReference Include="MediatR" Version="12.0.1" />
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.33.0" />
   </ItemGroup>
